# ld42

./: CMakeLists.txt  Game.cpp  Game.h  LICENSE  defs.h  main.cpp  vectors.h
GUI/: AudioStuff.cpp  AudioStuff.h  CommandTimer.cpp  CommandTimer.h  Scene.cpp  Scene.h  SceneList.h  SceneManager.cpp  SceneManager.h  UserInterface.cpp  UserInterface.h
GUI/Commands/: GameCommand.cpp  GameCommand.h  HowToCommand.cpp  HowToCommand.h  LaunchCommand.cpp  LaunchCommand.h  NewRowCommand.cpp  NewRowCommand.h  PlayGameCommand.cpp  PlayGameCommand.h  SelectBuildingCommand.cpp  SelectBuildingCommand.h  TileClickCommand.cpp  TileClickCommand.h  TimeTickCommand.cpp  TimeTickCommand.h
GUI/Resources/: AudioSampleManager.cpp  AudioSampleManager.h  BitmapManager.cpp  BitmapManager.h  FontManager.cpp  FontManager.h  ResourceManager.cpp  ResourceManager.h
GUI/Widgets/: Animation.cpp  Animation.h  BitmapAnimation.cpp  BitmapAnimation.h  Button.cpp  Button.h  Clickable.cpp  Clickable.h  FilledRectangle.cpp  FilledRectangle.h  ImageWidget.cpp  ImageWidget.h  SlowBitmapAnimation.cpp  SlowBitmapAnimation.h  Text.cpp  Text.h  Widget.cpp  Widget.h  WidgetComposition.cpp  WidgetComposition.h
GameStuff/: Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  BuildingList.h  Resources.cpp  Resources.h  Storage.cpp  Storage.h
GameStuff/Buildings/: FuelRefinery.cpp  (+13 more)
MyScenes/: GameScene.cpp  GameScene.h  HowToScene.cpp  HowToScene.h  LoseScreen.cpp  LoseScreen.h  TitleScene.cpp  TitleScene.h  WinScreen.cpp  WinScreen.h
cfg/: audio.yaml  bitmaps.yaml  fonts.yaml  fonts2.yaml
